gap fix

--- a/src/scss/components/common.scss
+++ b/src/scss/components/common.scss
@@ -75,7 +75,7 @@
     }
     &.resume {
         background-color: lighten($supportingColor1, 35);
-        padding-bottom: 300px;
+        padding-bottom: 150px;
         @include breakpoint(mobileonly) {
             
         }
